Created User Class, Login and Signup pages, and Dynamic User Pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,12 @@
     </style>
 
     <nav>
+        <a href='/'>Home</a>
         <a href='/blog'>Main Blog Page</a>
         <a href='/newpost'>Add a Blog Entry</a>
+<!-- fix to right align login and logout -->
+        <span style="text-align:right;"><a href='/login'>Login</a>
+        <a href='/logout'>Logout</a></span>
     </nav>
 
 
